--- a/proj/package.json
+++ b/proj/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@google/gemini-cli": "^0.11.1",
+    "@google/generative-ai": "^0.24.1",
     "express": "^5.1.0",
     "jq": "^1.7.2",
+    "openai": "^6.9.0",
     "websocket": "^1.0.35",
     "ws": "^8.18.3"
   }
